data/derived/comb/progs/unify/prog0915.ml.out
Characters 66-67:
  let fixpoint (f,b) = wwhile ((fun (f,b) -> match f b with | b -> (b, false) | _ -> (f b, true)),b);;
                                                                    ^
Error: This expression has type 'a but an expression was expected of type
         ('b -> 'a) * 'b
       The type variable 'a occurs inside ('b -> 'a) * 'b
